# language-detector

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
assets/: lang_labels.json
assets/samples/docx/: COP28__ANDORRA__ANDORRA_cop28cmp18cma5_HLS_FR.docx
assets/samples/md/: binary-husky__gpt_academic.md  彗星.md  水文学.md
assets/samples/odt/: COP28__ANDORRA__ANDORRA_cop28cmp18cma5_HLS_FR.odt
assets/samples/txt/: COP28__ANDORRA__ANDORRA_cop28cmp18cma5_HLS_FR.txt  COP28__BAHRAIN__BAHRAIN_cop28cmp18cma5_HLS_AR.txt  COP28__DEMOCRATIC_REPUBLIC_OF_THE_CONGO__DEMOCRATIC_REPUBLIC_OF_THE_CONGO_cop28cmp18cma5_HLS_FR.txt  COP28__EQUATORIAL_GUINEA__EQUATORIAL_GUINEA_cop28cmp18cma5_HLS_SP.txt  COP28__GERMANY__GERMANY_cop28cmp18cma5_HLS_DE.txt
docker/: Dockerfile.backend  Dockerfile.frontend  compose.yaml
models/: naive_bayes.pkl  naive_bayes_eval.json  xlm_roberta_eval.json
models/xlm-roberta/: config.json  model.safetensors
scripts/: eval_roberta.py  train_roberta_detector.py  train_sklearn_detector.py
src/app/: main.py  schemas.py
src/detector/: __init__.py  file_tools.py
src/detector/models/: base.py  sklearn.py
src/detectors/: __init__.py  base.py  roberta.py  sklearn.py
src/processors/: file_handlers.py
src/streamlit_ui/: main.py
src/ui/: main.py
src/utils/: file_tools.py  schemas.py
tests/: test_api.py  test_roberta.py  test_sklearn.py
tests/samples/: deu.txt  eng.txt  fra.txt  jpn.txt
