[project]
name = "detectors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hoanghapham", email = "hoangha.20021992@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "skops>=0.11.0",
    "streamlit>=1.46.1",
    "textract>=1.6.5",
    "torch>=2.7.1",
    "transformers>=4.53.0",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]

[project.scripts]
detectors = "detectors:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
